fix: prevent crash from bad file config upload and bug preventing vpn from starting via watcher service after reboot
Add catch for file configs that are malformed and display message to the user

Pass full tunnel config to watcher service after detecting reboot to allow watcher service to start tunnel properly.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="no_thanks">No thanks</string>
     <string name="turn_on">Turn on</string>
     <string name="map">Map</string>
+    <string name="bad_config">Bad config. Please try again.</string>
 </resources>
