fix: AndroidTV D-pad support and precise location check
Allows app be fully navigated via D-pad on AndroidTV (with some quirks)

Adds precise location check to setting screen as WiFi-SSID is not readable without this permission.

Closes #2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,6 @@
     <string name="location_services_not_detected">Unable to detect Location Services which are required for this feature. Please enable Location Services.</string>
     <string name="check_again">Check again</string>
     <string name="detecting_location_services_disabled">Detecting Location Services disabled</string>
+    <string name="precise_location_message">This feature requires precise location to access Wi-Fi SSID name. Please enable precise location here or in the app settings.</string>
+    <string name="request">Request</string>
 </resources>
