feat: dynamic shortcuts and package search
Add dynamic on and off shortcuts for each new tunnel added. Shortcuts will toggle auto tunneling to allow manual override.

Add package search for split tunneling.

Add tunnel toggling from tile even while app is closed and auto tunneling is disabled.

Refactor and code cleanup.

Closes #23 Closes #21

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,7 @@
     <string name="request">Request</string>
     <string name="toggle_vpn">Toggle VPN</string>
     <string name="no_tunnel_available">No tunnels available</string>
+    <string name="hint_search_packages">Search packages</string>
+    <string name="clear_icon">Clear Icon</string>
+    <string name="search_icon">Search Icon</string>
 </resources>
