fix: foreground service crash on older devices
Fixes a bug where older device take a longer time to launch the foreground service and connect to the VPN. Combined with a delayed launch of foreground notification until VPN connection is confirmed, this would break foreground service,s 5 second notification rule.

Fixed by adding a new attempting connection notification to launch on vpn initial connection attempt.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,6 @@
     <string name="hint_search_packages">Search packages</string>
     <string name="clear_icon">Clear Icon</string>
     <string name="search_icon">Search Icon</string>
+    <string name="attempt_connection">Attempting connection..</string>
+    <string name="vpn_starting">VPN Starting</string>
 </resources>
