refactor: objectbox to room
Migrated app from using ObjectBox library for db to Room as ObjectBox is not FLOSS compliant.

Migrated app to using version catalog for managing dependancies.

Added floss build flavor for F-Droid and general build flavor for all other builds. Floss build excludes google analytics and crashlytics.

Other performance improvements and refactors.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,5 @@
     <string name="search_icon">Search Icon</string>
     <string name="attempt_connection">Attempting connection..</string>
     <string name="vpn_starting">VPN Starting</string>
+    <string name="db_name">wg-tunnel-db</string>
 </resources>
