feat: ui update with full config edit
feat: Change config screen UI to accommodate editing of all fields.
Change config screen to allow the addition of new peers.
Closes #31

Change main screen to denote primary tunnel with star.
Change main screen tunnel options to allow changing tunnel to primary.

feat: Change settings screen UI to improve usability.
Closes #32

fix: Change application shortcuts to static shortcuts for the primary tunnel.
Remove dynamic shortcuts.
Closes #38

fix: Database changes from the previous version causing crashes.
#40 #37

fix: bug on detail screen where tunnel name was not showing

feat: Change button color when hovering on AndroidTV to improve visibility
#36

fix: Change file importing method to fix bug on FireTV
Closes #39

docs: update README with new screenshots

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,10 +21,9 @@
     <string name="notification_permission_required">Notifications permission is required for the app to work properly.</string>
     <string name="open_settings">Open Settings</string>
     <string name="add_trusted_ssid">Add Trusted SSID</string>
-    <string name="trusted_ssid">Trusted SSID</string>
+    <string name="trusted_ssid">Trusted SSIDs</string>
     <string name="tunnels">Tunnels</string>
-    <string name="select_tunnel">Select Tunnel</string>
-    <string name="enable_auto_tunnel">Enable auto tunneling</string>
+    <string name="enable_auto_tunnel">Enable auto-tunneling</string>
     <string name="tunnel_mobile_data">Tunnel on mobile data</string>
     <string name="background_location_reason">\"Allow all the time\" location permission is required for retrieving Wi-Fi SSID in the background. Permission is needed for this feature.</string>
     <string name="location_permission_reason">Location permission is required for this feature to work properly.</string>
@@ -32,6 +31,7 @@
     <string name="retry">"Retry"</string>
     <string name="privacy_policy">View Privacy Policy</string>
     <string name="okay">Okay</string>
+    <string name="tunnel_on_ethernet">Tunnel on ethernet</string>
     <string name="prominent_background_location_message">This feature requires background location permission to enable Wi-Fi SSID monitoring even while the application is closed. For more details, please see the Privacy Policy linked on the Support screen.</string>
     <string name="prominent_background_location_title">Background Location Disclosure</string>
     <string name="support_text">Thank you for using WG Tunnel! If you are experiencing issues with the app, please reach out on Discord or create an issue on Github. I will try to address the issue as quickly as possible. Thank you!</string>
@@ -51,7 +51,7 @@
     <string name="include">Include</string>
     <string name="tunnel_all">Tunnel all applications</string>
     <string name="config_changes_saved">Configuration changes saved.</string>
-    <string name="save_changes">Save changes</string>
+    <string name="save_changes">Save</string>
     <string name="icon">Icon</string>
     <string name="no_thanks">No thanks</string>
     <string name="turn_on">Turn on</string>
@@ -75,7 +75,7 @@
     <string name="failed_connection_to">Failed connection to -</string>
     <string name="initial_connection_failure_message">Attempting to connect to server after 30 seconds of no response.</string>
     <string name="lost_connection_failure_message">Attempting to reconnect to server after more than one minute of no response.</string>
-    <string name="always_on_vpn_support">Enable Always-On VPN support</string>
+    <string name="always_on_vpn_support">Allow Always-On VPN </string>
     <string name="select_tunnel_message">Please select a tunnel first</string>
     <string name="location_services_not_detected">Unable to detect Location Services which are required for this feature. Please enable Location Services.</string>
     <string name="check_again">Check again</string>
@@ -97,4 +97,31 @@
     <string name="stream_failed">Failed to open file stream.</string>
     <string name="unknown_error_message">An unknown error occurred.</string>
     <string name="no_file_app">No file app installed.</string>
+    <string name="other">Other</string>
+    <string name="auto_tunneling">Auto-tunneling</string>
+    <string name="select_tunnel">Select tunnel to use</string>
+    <string name="vpn_on">VPN on</string>
+    <string name="vpn_off">VPN off</string>
+    <string name="default_vpn_on">Primary VPN on</string>
+    <string name="default_vpn_off">Primary VPN off</string>
+    <string name="create_import">Create from scratch</string>
+    <string name="set_primary">Set primary</string>
+    <string name="turn_off_auto">Action requires auto-tunnel disabled</string>
+    <string name="add_peer">Add peer</string>
+    <string name="info">Info</string>
+    <string name="done">Done</string>
+    <string name="interface_">Interface</string>
+    <string name="rotate_keys">Rotate keys</string>
+    <string name="private_key">Private key</string>
+    <string name="copy_public_key">Copy public key</string>
+    <string name="base64_key">base64 key</string>
+    <string name="comma_separated_list">comma separated list</string>
+    <string name="listen_port">Listen port</string>
+    <string name="random">(random)</string>
+    <string name="auto">(auto)</string>
+    <string name="optional">(optional)</string>
+    <string name="optional_no_recommend">(optional, not recommended)</string>
+    <string name="preshared_key">Pre-shared key</string>
+    <string name="seconds">seconds</string>
+    <string name="persistent_keepalive">Persistent keepalive</string>
 </resources>
