--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,4 +124,7 @@
     <string name="preshared_key">Pre-shared key</string>
     <string name="seconds">seconds</string>
     <string name="persistent_keepalive">Persistent keepalive</string>
+    <string name="cancel">Cancel</string>
+    <string name="primary_tunnel_change">Primary tunnel change</string>
+    <string name="primary_tunnnel_change_question">Would you like to make this your primary tunnel?</string>
 </resources>
